<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Model;
use App\Traits\HasCustomId;
use Illuminate\Database\Eloquent\Relations\BelongsTo;
use Illuminate\Database\Eloquent\Relations\HasMany;

class Certification extends Model
{
    use HasFactory;
    use HasCustomId;

    protected $primaryKey = 'certification_id';
    public $incrementing = false;
    protected $keyType = 'string';

    protected $fillable = [
        'harvest_id',
        'planting_location_id',
        'plant_id',
        'certification_status',
        'seed_class_requested',
    ];

    protected $casts = [
        'certification_status' => 'string',
    ];

    public function harvest(): BelongsTo
    {
        return $this->belongsTo(Harvest::class, 'harvest_id', 'harvest_id');
    }

    public function reports(): HasMany
    {
        return $this->hasMany(CertificationReport::class, 'certification_id', 'certification_id');
    }

    public function plantingLocation(): BelongsTo
    {
        return $this->belongsTo(PlantingLocation::class, 'planting_location_id', 'planting_location_id');
    }

    public function plant(): BelongsTo
    {
        return $this->belongsTo(Plant::class, 'plant_id', 'plant_id');
    }

    /**
     * Get status label in Indonesian
     */
    public function getStatusLabelAttribute(): string
    {
        return match($this->certification_status) {
            'dalam_proses' => 'Dalam Proses',
            'lulus' => 'Lulus',
            'tidak_lulus' => 'Tidak Lulus',
            'selesai' => 'Selesai',
            default => $this->certification_status,
        };
    }

    /**
     * Get latest report date
     */
    public function getLatestReportDateAttribute(): ?string
    {
        $latestReport = $this->reports()->orderBy('report_date', 'desc')->first();
        return $latestReport ? $latestReport->report_date->format('d M Y') : null;
    }
}

